--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;1,900&display=swap');
-*{
-    font-family: 'Poppins',cursive;
+
+* {
+    font-family: 'Poppins', cursive;
 }
-body{
+
+body {
     color: azure;
     width: 100%;
     height: 100vh;
@@ -12,59 +14,151 @@ body{
     justify-content: center;
     background-color: black;
 }
-.greetings{
+
+.greetings {
     font-size: 6rem;
     font-weight: 900;
 }
-.greetings > span{
+
+.greetings>span {
     animation: glow 2.5s ease-in-out infinite;
 }
-@keyframes glow{
-    0%, 100%{
+
+@keyframes glow {
+
+    0%,
+    100% {
         color: #fff;
         text-shadow: 0 0 12px #39c6d6, 0 0 50px #39c6d6, 0 0 100px #39c6d6;
     }
-    10%, 90%{
+
+    10%,
+    90% {
         color: #111;
         text-shadow: none;
     }
 }
-.greetings > span:nth-child(2){
-    animation-delay: .2s ;
+
+.greetings>span:nth-child(2) {
+    animation-delay: .2s;
 }
-.greetings > span:nth-child(3){
-    animation-delay: .4s ;
+
+.greetings>span:nth-child(3) {
+    animation-delay: .3s;
 }
-.greetings > span:nth-child(4){
+
+.greetings>span:nth-child(4) {
+    animation-delay: .4s;
+}
+
+.greetings>span:nth-child(5) {
+    animation-delay: .5s;
+}
+
+.greetings>span:nth-child(6) {
     animation-delay: .6s;
 }
-.greetings > span:nth-child(5){
+
+.greetings>span:nth-child(7) {
+    animation-delay: .7s;
+}
+
+.greetings>span:nth-child(8) {
     animation-delay: .8s;
 }
 
-.description{
+.description {
     font-size: 1.5rem;
     margin-bottom: 20px;
 }
 
-.button a{
-    text-decoration: none;
-    font-size: 1rem;
-    color: #111;
+.button-85 {
+    height: 40px;
+    width: 200px;
+    border: none;
+    outline: none;
+    color: rgb(255, 255, 255);
+    background: #111;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 10px;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
 }
 
-@media screen and (max-width:574px){
-    .greetings{
+a .button-85 {
+    font-size: 17px;
+    text-decoration: none;
+    color: white
+}
+
+.button-85:before {
+    content: "";
+    background: linear-gradient(45deg,
+            #ff0000,
+            #ff7300,
+            #fffb00,
+            #48ff00,
+            #00ffd5,
+            #002bff,
+            #7a00ff,
+            #ff00c8,
+            #ff0000);
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    -webkit-filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing-button-85 20s linear infinite;
+    transition: opacity 0.3s ease-in-out;
+    border-radius: 10px;
+}
+
+@keyframes glowing-button-85 {
+    0% {
+        background-position: 0 0;
+    }
+
+    50% {
+        background-position: 400% 0;
+    }
+
+    100% {
+        background-position: 0 0;
+    }
+}
+
+.button-85:after {
+    z-index: -1;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #222;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+}
+
+@media screen and (max-width:574px) {
+    .greetings {
         display: block;
         font-size: 3rem;
         font-weight: 500;
         text-align: center;
     }
-    .description{
+
+    .description {
         font-size: 1rem;
     }
-    
-    .button a{
+
+    .button a {
         font-size: .5rem;
     }
 }
