--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,16 @@ body {
     background-color: black;
 }
 
+#countdown {
+    margin-top: 20%;
+    justify-content: center;
+    font-size: 30px;
+}
+
+#content {
+    visibility: hidden;
+}
+
 .greetings {
     font-size: 6rem;
     font-weight: 900;
