--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,8 +18,10 @@ body {
 
 #countdown {
     margin-top: 20%;
+    text-align: center;
     justify-content: center;
-    font-size: 30px;
+    font-size: 100px;
+    padding: 30px;
 }
 
 #content {
