--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -34,7 +34,7 @@ body {
   font-size: 30px;
 }
 
-#text-section {
+#text {
   position: absolute;
   top: 20px;
   left: 50%;
@@ -44,15 +44,30 @@ body {
   text-align: center;
 }
 
-#text-section p {
+#text h1 {
   font-size: 50px;
   font-weight: 20px;
 }
 
-.text-section-animation {
+#description {
+  position: absolute;
+  top: 200px;
+  transform: translateX(-50%);
+  color: #fff;
+  z-index: 10;
+  text-align: center;
+}
+
+.text-animation {
   display: block;
   opacity: 0;
   animation: fadeInGlow 2s forwards, glow 1s infinite;
+}
+
+.desc-animation {
+  display: block;
+  opacity: 0;
+  animation: fadeInGlow 2s forwards, glow 1s;
 }
 
 #text-section-bersiap {
@@ -1682,6 +1697,18 @@ body {
 .container * {
   -webkit-animation-play-state: paused !important;
   animation-play-state: paused !important;
+}
+
+@media (max-width: 740px) {
+  #text h1 {
+    font-size: 30px;
+    font-weight: 20px;
+  }
+
+  #desc {
+    margin-left: -60px;
+    margin-right: -60px;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
