--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ body {
     background-color: black;
 }
 
-#countdown {
+#info {
     margin-top: 20%;
     text-align: center;
     justify-content: center;
